<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_like"
        android:title="@string/like"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_cart"
        android:title="@string/about"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="ifRoom"/>
</menu>