<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.detail_shoe.DetailShoesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item_photo_detail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:adjustViewBounds="true"
            app:layoutDescription="@string/image_shoes"
            android:scaleType="fitXY"
            android:src="@drawable/patrobas_equip_low_black"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shoes_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_photo_detail"
            tools:text="Rp. 270000" />

        <TextView
            android:id="@+id/tv_shoes_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_shoes_price"
            tools:text="patrobas equip low black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_photo_detail"
            tools:src="@drawable/ic_baseline_favorite_24"
            />

        <TableLayout
            android:id="@+id/tbl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_shoes_name">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock" />

                <TextView
                    android:id="@+id/tv_shoes_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/sizes"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_shoes_sizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    tools:text="[ 36, 37, 40, 41, 42, 43 ]" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/description"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_shoes_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

        </TableLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_btn_fav_btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tbl_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:text="@string/share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_item"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_btn_fav_btn_share" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>